// Copyright 2023 Ant Group Co., Ltd.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package secretflow.spec.extend;

option java_package = "org.secretflow.spec.extend";

// Descibes public storage info for a collection of Device Objects.
message DeviceObjectCollection {
  message DeviceObject {
    // Supported: `spu \| pyu`
    string type = 1;
    // Index of data_ref in the parent DistData message.
    repeated int32 data_ref_idxs = 2;
  }

  repeated DeviceObject objs = 1;

  // Any public information.
  string public_info = 2;
}
